@@ -34,6 +34,7 @@ namespace RDKit {
 
   RDGeom::Point3D MolChemicalFeature::getPos(int confId) const {
     PRECONDITION(dp_mol,"bad molecule");
+    PRECONDITION(dp_mol->getNumConformers(),"molecule has no conformers");
     if(confId==-1) confId = (*dp_mol->beginConformers())->getId();
 
     // ------------- 
